compiler/testData/ir/interpreter/jvm/javaStatic.kt
const konst byteMax = <!EVALUATED: `127`!>{ java.lang.Byte.MAX_VALUE }()<!>
const konst byteMin = <!EVALUATED: `-128`!>{ java.lang.Byte.MIN_VALUE }()<!>
const konst byteSize = <!EVALUATED: `8`!>{ java.lang.Byte.SIZE }()<!>
const konst byteBytes = <!EVALUATED: `1`!>{ java.lang.Byte.BYTES }()<!>

const konst intMax = <!EVALUATED: `2147483647`!>{ java.lang.Integer.MAX_VALUE }()<!>
const konst intMin = <!EVALUATED: `-2147483648`!>{ java.lang.Integer.MIN_VALUE }()<!>
const konst intSize = <!EVALUATED: `32`!>{ java.lang.Integer.SIZE }()<!>
const konst intBytes = <!EVALUATED: `4`!>{ java.lang.Integer.BYTES }()<!>

const konst floatMax = <!EVALUATED: `3.4028235E38`!>{ java.lang.Float.MAX_VALUE }()<!>
const konst floatMin = <!EVALUATED: `1.4E-45`!>{ java.lang.Float.MIN_VALUE }()<!>
const konst floatSize = <!EVALUATED: `32`!>{ java.lang.Float.SIZE }()<!>
const konst floatBytes = <!EVALUATED: `4`!>{ java.lang.Float.BYTES }()<!>
const konst floatMaxExponent = <!EVALUATED: `127`!>{ java.lang.Float.MAX_EXPONENT }()<!>
const konst floatMinExponent = <!EVALUATED: `-126`!>{ java.lang.Float.MIN_EXPONENT }()<!>
const konst floatNegInfinity = <!EVALUATED: `-Infinity`!>{ java.lang.Float.NEGATIVE_INFINITY }()<!>
const konst floatPosInfinity = <!EVALUATED: `Infinity`!>{ java.lang.Float.POSITIVE_INFINITY }()<!>

const konst booleanFalse = <!EVALUATED: `false`!>{ java.lang.Boolean.FALSE }().toString()<!>
const konst booleanTrue = <!EVALUATED: `true`!>{ java.lang.Boolean.TRUE }().toString()<!>

const konst charMax = <!EVALUATED: `65535`!>{ java.lang.Character.MAX_VALUE }().toInt()<!>
const konst charMin = <!EVALUATED: `0`!>{ java.lang.Character.MIN_VALUE }().toInt()<!>
const konst charSize = <!EVALUATED: `16`!>{ java.lang.Character.SIZE }()<!>
const konst charBytes = <!EVALUATED: `2`!>{ java.lang.Character.BYTES }()<!>
